// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transaction router > getAllFull > when getting paginated transaction results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1008,
      "timestamp": 1693497600,
    },
    "blockHash": "blockHash008",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash016",
    "maxFeePerBlobGas": "100",
    "toId": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment004",
          "size": 1300,
        },
        "blobHash": "blobHash004",
        "index": 0,
      },
      {
        "blob": {
          "commitment": "commitment004",
          "size": 1300,
        },
        "blobHash": "blobHash004",
        "index": 1,
      },
      {
        "blob": {
          "commitment": "commitment004",
          "size": 1300,
        },
        "blobHash": "blobHash004",
        "index": 2,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1007,
      "timestamp": 1693490400,
    },
    "blockHash": "blockHash007",
    "fromId": "address5",
    "gasPrice": "10",
    "hash": "txHash015",
    "maxFeePerBlobGas": "100",
    "toId": "address4",
    "totalBlobSize": 3900,
  },
]
`;

exports[`Transaction router > getAllFull > when getting paginated transaction results > should return the correct number of results 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1008,
      "timestamp": 1693497600,
    },
    "blockHash": "blockHash008",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash016",
    "maxFeePerBlobGas": "100",
    "toId": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "8650752",
    "blobGasMaxFee": "39321600",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment004",
          "size": 1300,
        },
        "blobHash": "blobHash004",
        "index": 0,
      },
      {
        "blob": {
          "commitment": "commitment004",
          "size": 1300,
        },
        "blobHash": "blobHash004",
        "index": 1,
      },
      {
        "blob": {
          "commitment": "commitment004",
          "size": 1300,
        },
        "blobHash": "blobHash004",
        "index": 2,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1007,
      "timestamp": 1693490400,
    },
    "blockHash": "blockHash007",
    "fromId": "address5",
    "gasPrice": "10",
    "hash": "txHash015",
    "maxFeePerBlobGas": "100",
    "toId": "address4",
    "totalBlobSize": 3900,
  },
]
`;

exports[`Transaction router > getByAddress > when getting paginated address's transactions results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1008,
      "timestamp": 1693497600,
    },
    "blockHash": "blockHash008",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash016",
    "maxFeePerBlobGas": "100",
    "toId": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "7864320",
    "blobGasMaxFee": "39321600",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 1,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 2,
      },
    ],
    "block": {
      "blobGasPrice": "20",
      "excessBlobGas": "10000",
      "number": 1005,
      "timestamp": 1693216800,
    },
    "blockHash": "blockHash005",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash012",
    "maxFeePerBlobGas": "100",
    "toId": "address4",
    "totalBlobSize": 3000,
  },
]
`;

exports[`Transaction router > getByAddress > when getting paginated address's transactions results > should return the correct number of results 1`] = `
[
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "2883584",
    "blobGasMaxFee": "13107200",
    "blobGasUsed": "131072",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": "22",
      "excessBlobGas": "15000",
      "number": 1008,
      "timestamp": 1693497600,
    },
    "blockHash": "blockHash008",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash016",
    "maxFeePerBlobGas": "100",
    "toId": "address4",
    "totalBlobSize": 1000,
  },
  {
    "blobAsCalldataGasUsed": "1000",
    "blobGasBaseFee": "7864320",
    "blobGasMaxFee": "39321600",
    "blobGasUsed": "393216",
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 1,
      },
      {
        "blob": {
          "commitment": "commitment001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 2,
      },
    ],
    "block": {
      "blobGasPrice": "20",
      "excessBlobGas": "10000",
      "number": 1005,
      "timestamp": 1693216800,
    },
    "blockHash": "blockHash005",
    "fromId": "address2",
    "gasPrice": "10",
    "hash": "txHash012",
    "maxFeePerBlobGas": "100",
    "toId": "address4",
    "totalBlobSize": 3000,
  },
]
`;

exports[`Transaction router > getByHashFull > should get a transaction by hash correctly 1`] = `
{
  "blobAsCalldataGasUsed": "1000",
  "blobGasBaseFee": "8650752",
  "blobGasMaxFee": "39321600",
  "blobGasUsed": "393216",
  "blobs": [
    {
      "blob": {
        "commitment": "commitment001",
        "size": 1000,
      },
      "blobHash": "blobHash001",
      "index": 0,
    },
    {
      "blob": {
        "commitment": "commitment002",
        "size": 1100,
      },
      "blobHash": "blobHash002",
      "index": 1,
    },
    {
      "blob": {
        "commitment": "commitment003",
        "size": 1200,
      },
      "blobHash": "blobHash003",
      "index": 2,
    },
  ],
  "block": {
    "blobGasPrice": "22",
    "excessBlobGas": "15000",
    "number": 1001,
    "timestamp": 1665921600,
  },
  "blockHash": "blockHash001",
  "fromId": "address1",
  "gasPrice": "10",
  "hash": "txHash001",
  "maxFeePerBlobGas": "100",
  "toId": "address2",
  "totalBlobSize": 3300,
}
`;
